[metadata]
name = mistral
summary = Mistral Project
description-file =
    README.rst
license = Apache License, Version 2.0
home-page = http://docs.openstack.org/developer/mistral
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    #License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
author = OpenStack Mistral Team
author-email = openstack-dev@lists.openstack.org

[files]
packages =
    mistral
    mistral_tempest_tests

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[entry_points]
console_scripts =
    mistral-server = mistral.cmd.launch:main
    mistral-db-manage = mistral.db.sqlalchemy.migration.cli:main

oslo.config.opts =
    mistral.config = mistral.config:list_opts

oslo.config.opts.defaults =
    mistral.config = mistral.config:set_cors_middleware_defaults

tempest.test_plugins =
    mistral_test = mistral_tempest_tests.plugin:MistralTempestPlugin

mistral.actions =
    std.async_noop = mistral.actions.std_actions:AsyncNoOpAction
    std.noop = mistral.actions.std_actions:NoOpAction
    std.fail = mistral.actions.std_actions:FailAction
    std.echo = mistral.actions.std_actions:EchoAction
    std.http = mistral.actions.std_actions:HTTPAction
    std.mistral_http = mistral.actions.std_actions:MistralHTTPAction
    std.ssh = mistral.actions.std_actions:SSHAction
    std.ssh_proxied = mistral.actions.std_actions:SSHProxiedAction
    std.email = mistral.actions.std_actions:SendEmailAction
    std.javascript = mistral.actions.std_actions:JavaScriptAction
    custom.filter_vm = senlin.engine.actions.cluster_migration.filter_vm_action:FilterVmAction
    custom.live_migration = senlin.engine.actions.cluster_migration.live_migration.live_migrate_vm_action:LiveMigrateVmAction
    custom.validate_host = senlin.engine.actions.cluster_migration.live_migration.validate_host_action:ValidateHostAction
    custom.cold_migrate = senlin.engine.actions.cluster_migration.cold_migration.cold_migrate_vm_action:ColdMigrateVmAction
    custom.confirm_resize  = senlin.engine.actions.cluster_migration.cold_migration.confirm_resize_vm_action:ConfirmResizeVmAction
    custom.wait_vm = senlin.engine.actions.cluster_migration.cold_migration.wait_vm_action:WaitVmAction
    custom.validate_flavor = senlin.engine.actions.cluster_migration.cold_migration.validate_flavor_action:ValidateFlavorAction
