[metadata]
name = mistral
summary = Mistral Project
description-file =
    README.rst
license = Apache License, Version 2.0
home-page = http://docs.openstack.org/developer/mistral
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
author = OpenStack Mistral Team
author-email = openstack-dev@lists.openstack.org

[files]
packages =
    mistral
    mistral_tempest_tests

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[pbr]
autodoc_tree_index_modules = True

[upload_sphinx]
upload-dir = doc/build/html

[entry_points]
console_scripts =
    mistral-server = mistral.cmd.launch:main
    mistral-db-manage = mistral.db.sqlalchemy.migration.cli:main

mistral.engine.rpc_backend =
    oslo_client = mistral.engine.rpc_backend.oslo.oslo_client:OsloRPCClient
    oslo_server = mistral.engine.rpc_backend.oslo.oslo_server:OsloRPCServer
    kombu_client = mistral.engine.rpc_backend.kombu.kombu_client:KombuRPCClient
    kombu_server = mistral.engine.rpc_backend.kombu.kombu_server:KombuRPCServer

oslo.config.opts =
    mistral.config = mistral.config:list_opts

oslo.config.opts.defaults =
    mistral.config = mistral.config:set_cors_middleware_defaults

tempest.test_plugins =
    mistral_test = mistral_tempest_tests.plugin:MistralTempestPlugin

mistral.actions =
    std.async_noop = mistral.actions.std_actions:AsyncNoOpAction
    std.noop = mistral.actions.std_actions:NoOpAction
    std.fail = mistral.actions.std_actions:FailAction
    std.echo = mistral.actions.std_actions:EchoAction
    std.http = mistral.actions.std_actions:HTTPAction
    std.mistral_http = mistral.actions.std_actions:MistralHTTPAction
    std.ssh = mistral.actions.std_actions:SSHAction
    std.ssh_proxied = mistral.actions.std_actions:SSHProxiedAction
    std.email = mistral.actions.std_actions:SendEmailAction
    std.javascript = mistral.actions.std_actions:JavaScriptAction
    std.sleep = mistral.actions.std_actions:SleepAction
    custom.filter_vm = mistral.actions.openstack.cluster_migration.filter_vm_action:FilterVmAction
    custom.publish_vm_id = mistral.actions.openstack.cluster_migration.publish_vm_id_action:PublishVmIdAction
    custom.cold_migrate = mistral.actions.openstack.cluster_migration.cold_migration.cold_migrate_vm_action:ColdMigrateVmAction
    custom.wait_vm = mistral.actions.openstack.cluster_migration.cold_migration.wait_vm_action:WaitVmAction
    custom.confirm_resize = mistral.actions.openstack.cluster_migration.cold_migration.confirm_resize_vm_action:ConfirmResizeVmAction
    custom.validate_flavor = mistral.actions.openstack.cluster_migration.cold_migration.validate_flavor_action:ValidateFlavorAction
    custom.live_migrate = mistral.actions.openstack.cluster_migration.live_migration.live_migrate_vm_action:LiveMigrateVmAction
    custom.validate_host = mistral.actions.openstack.cluster_migration.live_migration.validate_host_action:ValidateHostAction

mistral.expression.functions =
    json_pp = mistral.utils.expression_utils:json_pp_
    task = mistral.utils.expression_utils:task_
    tasks = mistral.utils.expression_utils:tasks_
    execution = mistral.utils.expression_utils:execution_
    env = mistral.utils.expression_utils:env_
    uuid = mistral.utils.expression_utils:uuid_

mistral.expression.evaluators =
    yaql = mistral.expressions.yaql_expression:InlineYAQLEvaluator
    jinja = mistral.expressions.jinja_expression:InlineJinjaEvaluator

mistral.auth =
    keystone = mistral.auth.keystone:KeystoneAuthHandler
    keycloak-oidc = mistral.auth.keycloak:KeycloakAuthHandler
